--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <h1>About</h1>
     <p>
       This site is a sample project for the <strong> awesome</strong> git-tutorial
-      tutorial <em>Learn Enough Git<sup>tm</sup> to Be Dangerous<em>
+      tutorial <a href="http://learnenough.com/git-tutorial"> <em>Learn Enough Git<sup>tm</sup> to Be Dangerous<em></a>
     </p>
   </body>
 </html>
